--- a/src/app/_insight-dialog.component.html
+++ b/src/app/_insight-dialog.component.html
@@ -3,18 +3,16 @@
     <span *ngIf='page'>{{page.name}}:</span>
     Statistiken
 </h2>
-<mat-dialog-content>
-    <div *ngIf='!loaded'>
-        <mat-spinner color='accent'></mat-spinner>
-    </div>
-    <div>
-        <mat-tab-group dynamicHeight>
-            <mat-tab *ngFor='let insight of insights'>
-                <ng-template mat-tab-label>{{insight.description}}</ng-template>
-                <insight [insight]='insight'></insight>
-            </mat-tab>
-        </mat-tab-group>
-    </div>
+<mat-dialog-content *ngIf='!loaded'>
+    <mat-spinner color='accent'></mat-spinner>
+</mat-dialog-content>
+<mat-dialog-content *ngIf='loaded'>
+    <mat-tab-group dynamicHeight>
+        <mat-tab *ngFor='let insight of insights'>
+            <ng-template mat-tab-label>{{insight.description}}</ng-template>
+            <insight [insight]='insight'></insight>
+        </mat-tab>
+    </mat-tab-group>
 </mat-dialog-content>
 <mat-dialog-actions>
     <button
