--- a/src/app/_layout.component.html
+++ b/src/app/_layout.component.html
@@ -1,5 +1,5 @@
 <!-- HTML template for the LayoutComponent -->
-<div [class.dark]='dark'>
+<div [class.dark]='settingsService.settings.ui.dark'>
     <mat-sidenav-container id='main'>
         <mat-sidenav #nav id='nav' mode='over'>
             <mat-toolbar>
@@ -121,7 +121,8 @@
             </button>
             <mat-menu #settings='matMenu'>
                 <div mat-menu-item>
-                    <mat-slide-toggle [(ngModel)]='dark'>
+                    <mat-slide-toggle
+                            [(ngModel)]='settingsService.settings.ui.dark'>
                         Dark mode
                         <mat-icon>invert_colors</mat-icon>
                     </mat-slide-toggle>
