Fix a copy-paste error.

--- a/src/app/_insight-dialog.component.scss
+++ b/src/app/_insight-dialog.component.scss
@@ -1,7 +1,7 @@
 
 /*
- * Styling partial for the PostDialogComponent.
+ * Styling partial for the InsightDialogComponent.
  *
- * This contains style directives locally applied to the PostDialogComponent.
+ * This contains style directives locally applied to the InsightDialogComponent.
  */
 
