--- a/src/app/aside/_post.component.html
+++ b/src/app/aside/_post.component.html
@@ -32,6 +32,7 @@
                     {{post.likes.summary.total_count}}
                 </span>
             </span>
+            <br class='mobile-only'>
             <span
                     [matTooltip]='post.shareTooltip'
                     matTooltipShowDelay='1500'
