Override some more of the new @angular/material styling.

--- a/src/app/_styles.scss
+++ b/src/app/_styles.scss
@@ -166,6 +166,10 @@ mat-grid-tile:hover {
     a { color: $primary-light-fg; }
 }
 
+mat-tab-body, .mat-tab-body-content {
+    overflow: hidden!important;
+}
+
 mat-tab-header {
     .mat-tab-label-container {
         justify-content: center;
