--- a/src/app/_styles.scss
+++ b/src/app/_styles.scss
@@ -42,6 +42,7 @@ body {
 button, .button {
     margin: 6px 8px!important;
     padding: 0 8px!important;
+    overflow: hidden;
 }
 
 file {
@@ -185,6 +186,17 @@ nav, aside, main {
     overflow-y: scroll;
 }
 
+p {
+    button, .button {
+        overflow: inherit;
+    }
+}
+
+pre {
+    font-family: inherit;
+    white-space: pre-wrap;
+}
+
 profile .mat-card-header-text > mat-card-title {
     @extend .truncate;
 }
@@ -244,22 +256,33 @@ mat-card-footer > *,
     right: 0;
 }
 
+.app-content-wrapper {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+
+    [app-content] {
+        flex-grow: 1;
+    }
+}
+
 .app-icon-button {
-  box-shadow: none;
-  user-select: none;
-  background: none;
-  border: none;
-  cursor: pointer;
-  filter: none;
-  font-weight: normal;
-  height: auto;
-  line-height: inherit;
-  margin: 0;
-  min-width: 0;
-  padding: 0;
-  text-align: left;
-  text-decoration: none;
-  display: inline!important;
+    box-shadow: none;
+    user-select: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    filter: none;
+    font-weight: normal;
+    height: auto;
+    line-height: inherit;
+    margin: 0;
+    min-width: 0;
+    padding: 0;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block!important;
+    overflow: inherit;
 }
 
 .app-toolbar-filler {
